--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,17 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+/*  Base Styles  */
+html {
+  font-family: 'Nunito Sans', Helvetica, sans-serif; }
+
+/*  Nav  */
+.navbar {
+  border-bottom: 1px solid #000; }
+
+/*  Main  */
+main {
+  max-width: 1200px;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000; }
