--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,42 @@ html {
 
 /*  Nav  */
 .navbar {
-  border-bottom: 1px solid #000; }
+  border-bottom: 1px solid #000;
+  padding: 1rem 5rem;
+  /* Link Border Animation Start */
+  /* Link Border Animation End */ }
+  .navbar .container-fluid {
+    padding: 0; }
+  .navbar .navbar-brand {
+    color: #000;
+    font-size: 1.25rem;
+    padding: .5rem 0;
+    margin: 0; }
+  .navbar .navbar-toggler-icon {
+    border-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .navbar .navbar-toggler-icon .fa-bars {
+      color: #000;
+      font-size: 1.5rem; }
+  .navbar a.nav-link {
+    color: #000;
+    font-size: 1.25rem;
+    padding: .5rem 0.25rem !important;
+    margin-left: 1.5rem; }
+  .navbar .animatedBorder {
+    position: relative; }
+  .navbar .animatedBorder:after {
+    content: '';
+    position: absolute;
+    border-bottom: 1px solid #000;
+    bottom: 0;
+    left: 0;
+    right: 100%;
+    transition: all .5s; }
+  .navbar .animatedBorder:hover:after {
+    right: 0; }
 
 /*  Main  */
 main {
