--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,11 +3,57 @@
 html {
     font-family: 'Nunito Sans', Helvetica, sans-serif;
 }
+// Background photo created by rawpixel.com
 
 /////////////////////////////////////////
 /*  Nav  */
 .navbar {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid $primary-accent;
+    padding: 1rem 5rem;
+
+    .container-fluid {
+        padding: 0;
+    }
+    .navbar-brand {
+        color: $primary-accent;
+        font-size: 1.25rem;
+        padding: .5rem 0;
+        margin: 0;
+    }
+    .navbar-toggler-icon {
+        border-color: $primary-accent;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .fa-bars {
+            color: $primary-accent;
+            font-size: 1.5rem;
+        }
+    }
+    a.nav-link {
+        color: $primary-accent;
+        font-size: 1.25rem;
+        padding: .5rem 0.25rem !important;
+        margin-left: 1.5rem;
+    }
+    /* Link Border Animation Start */
+    .animatedBorder {
+        position: relative;
+    }
+    .animatedBorder:after {
+        content: '';
+        position: absolute;
+        border-bottom: 1px solid $primary-accent;
+        bottom: 0;
+        left: 0;
+        right: 100%;
+        transition: all .5s;
+    }
+    .animatedBorder:hover:after {
+        right: 0;
+    }
+    /* Link Border Animation End */
 }
 
 /////////////////////////////////////////
