--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,18 @@ table {
 
 /*  Base Styles  */
 html {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: "Open Sans", Helvetica, sans-serif;
   font-size: 16px;
   background-color: #fff; }
 
 body {
   color: #3e3e3e; }
+
+h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  color: #3e3e3e;
+  padding: 1rem; }
 
 /*  Nav  */
 .navbarContainer {
@@ -100,6 +106,12 @@ body {
 main {
   max-width: 1200px;
   margin: 0 auto; }
+  main .dividerSection {
+    display: flex;
+    justify-content: center;
+    padding: 0 0 7rem 0; }
+    main .dividerSection img {
+      height: 150px; }
   main #landingAbout {
     display: flex;
     flex-direction: column;
