--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,8 @@ table {
 html {
   font-family: "Open Sans", Helvetica, sans-serif;
   font-size: 16px;
-  background-color: #fff; }
+  background-color: #fff;
+  scroll-behavior: smooth; }
 
 body {
   color: #3e3e3e; }
@@ -57,8 +58,12 @@ body {
 h1 {
   font-size: 4rem;
   font-weight: 700;
-  color: #3e3e3e;
-  padding: 1rem; }
+  color: #3e3e3e; }
+
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: all .4s; }
 
 /*  Nav  */
 .navbarContainer {
@@ -109,7 +114,7 @@ main {
   main .dividerSection {
     display: flex;
     justify-content: center;
-    padding: 0 0 7rem 0; }
+    margin: 0 0 9rem 0; }
     main .dividerSection img {
       height: 150px; }
   main #landingAbout {
@@ -152,11 +157,59 @@ main {
       height: 75px;
       width: auto;
       bottom: 10rem; }
+  main #projectsSection {
+    width: 100%;
+    padding: 0 1rem;
+    margin-bottom: 7rem; }
+    main #projectsSection h1 {
+      padding-bottom: 2rem; }
+    main #projectsSection .projectsContainer {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between; }
+      main #projectsSection .projectsContainer a {
+        width: 48%; }
+      main #projectsSection .projectsContainer .projectCard {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 350px;
+        background-color: #3e3e3e;
+        color: #fff;
+        padding: 1.5rem;
+        transition: all .4s; }
+        main #projectsSection .projectsContainer .projectCard img {
+          height: 70%; }
+        main #projectsSection .projectsContainer .projectCard .cardInfoTop {
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-start; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoTop h3 {
+            font-weight: 600; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoTop a:hover {
+            color: #fff;
+            transform: scale(1.3); }
+          main #projectsSection .projectsContainer .projectCard .cardInfoTop i {
+            font-size: 1.6rem; }
+        main #projectsSection .projectsContainer .projectCard .cardInfoBottom {
+          display: flex;
+          justify-content: space-between;
+          align-items: flex-end; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoBottom p {
+            font-size: .75rem;
+            font-weight: 600; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoBottom a:hover {
+            color: #000; }
+          main #projectsSection .projectsContainer .projectCard .cardInfoBottom i {
+            font-size: 2rem; }
+      main #projectsSection .projectsContainer .projectCard:hover {
+        transform: scale(0.98); }
 
 /*  Media Queries  */
 @media screen and (max-width: 767px) {
   .navbar a.nav-link {
-    margin-left: 0;
+    margin-left: 0 !important;
     text-align: center; } }
 @media screen and (min-width: 320px) {
   main #landingAbout .morphing {
@@ -169,7 +222,10 @@ main {
     font-size: 2.5rem;
     line-height: 3rem; }
   main #landingAbout .scrollIcon {
-    bottom: 5rem; } }
+    bottom: 5rem; }
+  main .projectsContainer a {
+    padding: 1rem 0;
+    width: 100% !important; } }
 @media screen and (min-width: 375px) {
   main #landingAbout .morphing {
     font-size: 4rem; }
@@ -205,7 +261,9 @@ main {
     font-size: 6.5rem;
     line-height: 7rem; }
   main #landingAbout .scrollIcon {
-    bottom: 6rem; } }
+    bottom: 6rem; }
+  main .projectsContainer a {
+    width: 48% !important; } }
 @media screen and (min-width: 1024px) and (min-height: 1366px) {
   main #landingAbout .morphing {
     font-size: 9rem; }
