Edited about me page comment in stylesheet

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -230,7 +230,8 @@ main {
         }
     }
 
-    // About Me Page
+    /////////////////////////////////////////
+    /*  About Me Page  */
     #aboutMeSection {
         padding: 1rem;
         // min-height: 100vh;
