--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,8 @@ a.inlineLink {
 /*  Main  */
 main {
   max-width: 1200px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  /*  About Me Page  */ }
   main .dividerSection {
     display: flex;
     justify-content: center;
