--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -8,7 +8,6 @@ html {
 }
 body {
     color: $primary-accent;
-    overflow-x: hidden;
 }
 h1 {
     font-size: 4rem;
@@ -160,7 +159,7 @@ main {
         margin-bottom: 10rem;
 
         h1 {
-            padding-bottom: 2rem;
+            margin-bottom: 2rem;
         }
         p {
             font-size: 1.5rem;
@@ -234,8 +233,10 @@ main {
     /*  About Me Page  */
     #aboutMeSection {
         padding: 1rem;
-        // min-height: 100vh;
-
+        
+        h1 {
+            margin: 1rem 0 .5rem 0;
+        }
         .aboutMeDescription {
             display: flex;
             flex-direction: column;
@@ -545,8 +546,8 @@ main {
 
 @media screen and (min-width: 1200px) {
     main {
-        border-left: 1px solid #000;
-        border-right: 1px solid #000;
+        // border-left: 1px solid #000;
+        // border-right: 1px solid #000;
 
         #landingAbout {
             
